--- a/static/app/user/login.html
+++ b/static/app/user/login.html
@@ -1,6 +1,6 @@
 <div class="container" ng-init="initializeController()">
     <div class="row">
-        <div class="center-form panel">
+        <div class="center-form panel panel-shadow">
             <div class="panel-body">
                 <h2 class="text-center">Log in</h2>
                 <form ng-submit="login()" name="loginForm">
