--- a/static/app/main/navBar.html
+++ b/static/app/main/navBar.html
@@ -13,21 +13,21 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li class="dropdown" ng-if="isAuthenticated()">
-                        <a data-toggle="dropdown" href="#" id="dropdownMenu1">Modules <b class="caret"></b></a>
+                        <a data-toggle="dropdown" href="" id="dropdownMenu1">Modules <b class="caret"></b></a>
                         <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-                            <li role="presentation"><a role="menuitem" tabIndex="-1">Contact Management</a>
+                            <li role="presentation"><a role="menuitem" tabIndex="-1" ui-sref="contact">Contact Management</a>
                             </li>
                             <li role="presentation" class="divider"></li>
                             <li role="presentation">
-                                <a role="menuitem" tabIndex="-1">Master Setup</a>
+                                <a role="menuitem" tabIndex="-1" ui-sref="master">Master Setup</a>
                             </li>
                         </ul>
                     </li>
                     <li class="dropdown" ng-if="isAuthenticated()">
-                        <a data-toggle="dropdown" id="dropdownBookmarks">Bookmarks <b class="caret"></b></a>
+                        <a data-toggle="dropdown" href="" id="dropdownBookmarks">Bookmarks <b class="caret"></b></a>
                         <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownBookmarks">
                             <li role="presentation" class="divider"></li>
-                            <li role="presentation"><a href="#" id="add-bookmark-link" role="menuitem" tabindex=-1>
+                            <li role="presentation"><a href="" id="add-bookmark-link" role="menuitem" tabindex=-1>
                                 <span class="glyphicon glyphicon-plus"></span> Add Bookmark</a></li>
                         </ul>
                     </li>
@@ -45,7 +45,7 @@
                         <a id="preferenceLink" title="Preference" ui-sref="preference">Preference</a>
                     </li>
                     <li class="dropdown">
-                        <a data-toggle="dropdown" id="dropdownUser">{{currentUser().name}} <b class="caret"></b></a>
+                        <a data-toggle="dropdown" href="" id="dropdownUser">{{currentUser().name}} <b class="caret"></b></a>
                         <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownUser">
                             <li role="presentation"><a role="menuitem" , tabIndex="-1" ui-sref="managerUser">Manage User</a></li>
                             <li role="presentation" class="divider"></li>
