--- a/static/app/user/preference.html
+++ b/static/app/user/preference.html
@@ -13,28 +13,28 @@
     <form ng-submit="updatePreference(PreferenceForm)" id="PreferenceForm" name="PreferenceForm" class="form-horizontal" role="form"
         ng-validate="validationOptions">
         <div class="form-group has-feedback">
-            <label class="col-xs-2 control-label" for="organization">Organization</label>
+            <label class="col-xs-2 control-label" for="Organization">Organization</label>
             <div class="col-xs-2">
-                <select class="form-control valid" id="organization" name="organization" ng-model="OrganizationID" ng-options="Organization.ID as Organization.Name for Organization in Organizations track by Organization.ID">
+                <select class="form-control valid" id="Organization" name="Organization" ng-model="OrganizationID" ng-options="Organization.ID as Organization.Name for Organization in Organizations">
                     <option value="">--Select Organization--</option>
                 </select>
             </div>
         </div>
 
         <div class="form-group has-feedback">
-            <label class="col-xs-2 control-label" for="cultureui">Language</label>
+            <label class="col-xs-2 control-label" for="CultureUI">Language</label>
             <div class="col-xs-2">
-                <select class="form-control valid" id="cultureui" name="cultureui" ng-model="CultureUIID" ng-options="CultureUI.ID as CultureUI.Name for CultureUI in CultureUIs track by CultureUI.ID">
+                <select class="form-control valid" id="CultureUI" name="CultureUI" ng-model="CultureUIID" ng-options="CultureUI.ID as CultureUI.Name for CultureUI in CultureUIs">
                     <option value="">--Select Languages--</option>
                 </select>
             </div>
         </div>
         <div class="form-group has-feedback">
-            <label class="col-xs-2 control-label" for="workingdate">Working Date</label>
+            <label class="col-xs-2 control-label" for="WorkingDate">Working Date</label>
             <div class="col-xs-2">
                 <!-- <input class="form-control" name="WorkingDate" ng-model="WorkingDate" id="WorkingDate" kendo-date-picker k-options="datePickerConfig"> -->
                 
-                <input type="text" class="form-control" name="workingdate" id="workingdate" uib-datepicker-popup="dd/MM/yyyy" ng-model="WorkingDate"/>
+                <input type="text" class="form-control" name="WorkingDate" id="WorkingDate" uib-datepicker-popup="dd/MM/yyyy" ng-model="WorkingDate"/>
                 
             </div>
 
