--- a/static/app/main/master.html
+++ b/static/app/main/master.html
@@ -19,9 +19,11 @@
                         <div class="panel-heading">Contact Manager</div>
                         <div class="panel-body">
                             <div class="row">
-                                <div class="col-xs-4 col-md-4">
+                                <div class="col-md-4">
                                     <ul class="nav nav-pills nav-stacked">
-                                        <li><a href="">Setup</a></li>
+                                        <li><a ui-sref="setup({setupModule: 'contactManager'})">Setup</a></li>
+                                        <li><a ui-sref="businessRelationType">Business Relation Type</a></li>
+                                        <li><a ui-sref="businessRelationSector">Business Relation Sector</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -34,19 +36,19 @@
                         <div class="panel-heading">System</div>
                         <div class="panel-body">
                             <div class="row">
-                                <div class="col-xs-4 col-md-4">
+                                <div class="col-md-4">
                                     <ul class="nav nav-pills nav-stacked">
                                         <li><a href="">Currency</a></li>
                                         <li><a href="">Currency Convert Rates</a></li>
                                         <li><a href="">Periods</a></li>
                                     </ul>
                                 </div>
-                                <div class="col-xs-4 col-md-4">
+                                <div class="col-md-4">
                                     <ul class="nav nav-pills nav-stacked">
                                         <li><a href="">Number Sequences</a></li>
                                     </ul>
                                 </div>
-                                <div class="col-xs-4 col-md-4">
+                                <div class="col-md-4">
                                     <ul class="nav nav-pills nav-stacked">
                                         <li><a href="">Client Information</a></li>
                                         <li><a href="">Organizations</a></li>
