--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>CRM</title>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no"/>
-    <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="/bower_components/angular-block-ui/dist/angular-block-ui.min.css"/>
     <link rel="stylesheet" href="/bower_components/angular-toastr/dist/angular-toastr.min.css"/>
     <!-- <link rel="stylesheet" href="http://kendo.cdn.telerik.com/2016.2.504/styles/kendo.common-bootstrap.min.css"> -->
