--- a/static/app/main/navBar.html
+++ b/static/app/main/navBar.html
@@ -45,7 +45,7 @@
                         <a id="preferenceLink" title="Preference" ui-sref="preference">Preference</a>
                     </li>
                     <li class="dropdown">
-                        <a data-toggle="dropdown" href="" id="dropdownUser">{{currentUser().name}} <b class="caret"></b></a>
+                        <a data-toggle="dropdown" href="" id="dropdownUser">{{currentUser.Name}} <b class="caret"></b></a>
                         <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownUser">
                             <li role="presentation"><a role="menuitem" , tabIndex="-1" ui-sref="managerUser">Manage User</a></li>
                             <li role="presentation" class="divider"></li>
