--- a/static/app/common/directives/searchForm.html
+++ b/static/app/common/directives/searchForm.html
@@ -1,4 +1,4 @@
-<div class="row" ng-repeat="searchCondition in ctrl.searchConditions">
+<div class="row" ng-repeat="searchCondition in searchConditions">
     <div class="form-group" ng-class="{'has-error': searchCondition.HasError}">
         <div class="col-xs-2">
             <select class="form-control valid" ng-model="searchCondition.Object" ng-options="searchConditionObject.Name for searchConditionObject in searchCondition.Objects">
@@ -13,13 +13,13 @@
             </div>
         </div>
     
-        <button type="button" class="btn btn-danger" ng-show="$index > 0" ng-click="ctrl.removeSearchCondition($index)"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
-        <button type="button" class="btn btn-default" ng-show="$index == ctrl.searchConditions.length - 1" ng-click="ctrl.addSearchCondition()"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></button>
+        <button type="button" class="btn btn-danger" ng-show="$index > 0" ng-click="removeSearchCondition($index)"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
+        <button type="button" class="btn btn-default" ng-show="$index == searchConditions.length - 1" ng-click="addSearchCondition()"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></button>
     </div>   
 </div>
 <div class="row">
-    <div class="col-xs-2">
-        <button type="button" class="btn btn-default" ng-click="ctrl.startSearch()"><i class="fa fa-search" aria-hidden="true"></i> Search</button>
-        <button type="button" class="btn btn-default" ng-click="ctrl.clearSearch()"><i class="fa fa-eraser" aria-hidden="true"></i> Clear</button>
+    <div class="col-md-4">
+        <button type="button" class="btn btn-default" ng-click="startSearch()"><i class="fa fa-search" aria-hidden="true"></i> Search</button>
+        <button type="button" class="btn btn-default" ng-click="clearSearch()"><i class="fa fa-eraser" aria-hidden="true"></i> Clear</button>
     </div>
 </div>
