searchForm directive working

--- a/static/app/contactManager/businessRelationTypes.html
+++ b/static/app/contactManager/businessRelationTypes.html
@@ -19,7 +19,7 @@
         </div>
     </div>
     <div class="margin-bottom-15" uib-collapse="!isSearched">
-		<div class="well" search-form search-condition-objects="searchConditionObjects" search-callback="getBusinessRelationTypes(searchSqlCondition)"/>
+		<div class="well" search-form search-condition-objects="searchConditionObjects" search-callback="getBusinessRelationTypes(param)"/>
 	</div>
     <div class="row">
         <div class="col-md-6 margin-bottom-15">
