--- a/static/app/main/master.html
+++ b/static/app/main/master.html
@@ -26,6 +26,11 @@
                                         <li><a ui-sref="businessRelationSector">Business Relation Sector</a></li>
                                     </ul>
                                 </div>
+                                <div class="col-md-4">
+                                    <ul class="nav nav-pills nav-stacked">
+                                        <li><a ui-sref="profileQuestionnaireSetup">Profile Questionnaire Setup</a></li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
