--- a/static/app/main/master.html
+++ b/static/app/main/master.html
@@ -28,7 +28,7 @@
                                 </div>
                                 <div class="col-md-4">
                                     <ul class="nav nav-pills nav-stacked">
-                                        <li><a ui-sref="profileQuestionnaireSetup">Profile Questionnaire Setup</a></li>
+                                        <li><a ui-sref="profileQuestionnaire">Profile Questionnaire Setup</a></li>
                                     </ul>
                                 </div>
                             </div>
