--- a/static/app/main/master.html
+++ b/static/app/main/master.html
@@ -1,4 +1,4 @@
-<div class="container-fluid body-content" ng-init="initializeController()">
+<div ng-init="initializeController()">
     <div class="page-header">
         <h2>Master</h2>
     </div>
