--- a/static/app/user/preference.html
+++ b/static/app/user/preference.html
@@ -1,4 +1,4 @@
-<div class="container-fluid body-content" ng-init="initializeController()">
+<div ng-init="initializeController()">
     <div class="page-header">
         <div class="row">
             <div class="col-sm-8">
