--- a/static/app/contactManager/businessRelationSectors.html
+++ b/static/app/contactManager/businessRelationSectors.html
@@ -29,14 +29,14 @@
                         <tr>
                             <th style="text-align: center; width: 15px; min-width: 15px;"></th>
                             <th class="col-md-1">Code</th>
-                            <th class="col-md-2">Name</th>
+                            <th class="col-md-2">Description</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr ng-repeat="businessRelationSector in (FilteredItems = (BusinessRelationSectors|limitTo: PageSize: (CurrentPage - 1) * PageSize))">
                             <td style="text-align: center;" ng-click="toggleSelection(businessRelationSector.ID)"><input type="checkbox" id="{{businessRelationSector.ID}}" value="{{businessRelationSector.ID}}" ng-checked="Selection.indexOf(businessRelationSector.ID) > -1"/></td>
                             <td><a ui-sref="businessRelationSectorMaintenance({id: '{{businessRelationSector.ID}}'})">{{businessRelationSector.Code}}</a</td>
-                            <td><div ng-bind="businessRelationSector.Name"></div></td>
+                            <td><div ng-bind="businessRelationSector.Description"></div></td>
                         </tr>
                     </tbody>
                 </table>
