--- a/static/app/contactManager/profileQuestionnaireMaintenance.html
+++ b/static/app/contactManager/profileQuestionnaireMaintenance.html
@@ -59,7 +59,7 @@
         <div class="form-group has-feedback">
             <label class="control-label" for="BusinessRelationTypeCode">Business Relation Code</label>
             <div class="">
-                <input type="text" class="form-control" name="BusinessRelationTypeCode" id="BusinessRelationTypeCode" ng-model="BusinessRelationTypeCode" />
+                <input type="text" class="form-control" name="BusinessRelationTypeCode" id="BusinessRelationTypeCode" autocomplete autocomplete-object="business_relation_type" autocomplete-id="BusinessRelationTypeID" ng-model="BusinessRelationTypeCode" />
             </div>
         </div>
 
