--- a/static/app/contactManager/businessRelationSectorMaintenance.html
+++ b/static/app/contactManager/businessRelationSectorMaintenance.html
@@ -26,9 +26,9 @@
         </div>
 
         <div class="form-group has-feedback">
-            <label class="col-xs-2 control-label" for="Name">Name</label>
+            <label class="col-xs-2 control-label" for="Description">Description</label>
             <div class="col-xs-2">
-                <input type="text" class="form-control" name="Name" id="Name" ng-model="Name"/>
+                <input type="text" class="form-control" name="Description" id="Description" ng-model="Description"/>
             </div>
         </div>
         <div class="form-group has-feedback">
